--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,7 @@
 logging.level.org.springframework=INFO 
-logging.level.com.logParser=DEBUG,ERROR
+logging.level.com.logParser=DEBUG
+logging.level.com.logParser=ERROR
 
 logging.file = ./logs/Parser.log
+
+parserfile.location = D:\\Workspace\\JavaLogParser\\src1\\data.log
