--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,4 +4,8 @@ logging.level.com.logParser=ERROR
 
 logging.file = ./logs/Parser.log
 
+#context path
+server.servlet.context-path=/Parser
+
+#location of the file to be parsed
 parserfile.location = D:\\Workspace\\JavaLogParser\\src1\\data.log
